fix: rename bundler-server to server

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@importmapper/bundler-server",
+  "name": "@importmapper/server",
   "version": "0.0.1",
   "description": "",
   "type": "module",
