--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,9 @@
     "build": "vite build",
     "test": "vitest",
     "test:watch": "npm run test -- --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "node dist/index.js",
+    "deploy": "cd ../.. && flyctl deploy --config packages/server/fly.toml --dockerfile packages/server/Dockerfile"
   },
   "keywords": [],
   "author": "",
