--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "build": "turbo run build",
-    "dev": "turbo run dev --parallel"
+    "dev": "turbo run dev --parallel",
+    "deploy": "turbo run deploy",
+    "deploy:affected": "npm run deploy -- --filter=${BASE_COMMIT:-...[origin/main]}"
   },
   "keywords": [],
   "author": "",
