--- a/turbo.json
+++ b/turbo.json
@@ -3,14 +3,12 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".dist/**/*"]
+      "outputs": ["dist/**/*"]
     },
     "test": {
       "outputs": ["coverage/**/*"]
     },
-    "lint": {
-      "cache": false
-    },
+    "lint": {},
     "dev": {
       "cache": false
     },
