--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "turbo": "^1.4.6"
   },
   "dependencies": {
-    "@types/node": "^18.11.15",
-    "commander": "^9.4.1"
+    "@types/node": "^18.11.15"
   }
 }
